# MyFrame

./: CMakeLists.txt  Makefile  README.md
src/: config.cc  config.h  log.cc  log.h  singleton.h  util.cc  util.h
tests/: test.cc  test_config.cc
